<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="136dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="393dp"
            android:layout_height="match_parent"
            android:background="#9CE4ED">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="333dp"
                android:layout_height="31dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="1"
                android:text="@string/textview"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="345dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="2"
                android:text="@string/textview1"
                android:textAlignment="viewEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                tools:text="Date" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="345dp"
                android:layout_height="52dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:maxLength="80"
                android:maxLines="2"
                android:text="@string/description"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>